[gd_scene load_steps=6 format=3]

[ext_resource type="Texture2D" uid="uid://bkwpw4jkh22c2" path="res://sprites/environment/main_office/controlled_shock.png" id="1"]
[ext_resource type="Script" path="res://sprites/environment/main_office/controlled_shock.gd" id="2"]
[ext_resource type="Script" path="res://scripts/environment/interactable_button.gd" id="3"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(24, 40)
script = null

[node name="controlled_shock" type="Sprite2D"]
position = Vector2(640, 548)
texture = ExtResource("1")
script = ExtResource("2")

[node name="controlled_shock_button" type="Button" parent="." node_paths=PackedStringArray("cooldown_timer")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = -88.0
offset_right = -8.0
offset_bottom = -48.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("1")
script = ExtResource("3")
cooldown_timer = NodePath("../controlled_shock_cooldown")

[node name="interact_area" type="Area2D" parent="controlled_shock_button" groups=[
"interactable",
]]
position = Vector2(30, 186)

[node name="interact_collider" type="CollisionShape2D" parent="controlled_shock_button/interact_area"]
position = Vector2(-18, -166)
shape = SubResource("2")

[node name="controlled_shock_cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="button_disabled" from="." to="controlled_shock_button" method="set_interact_state_absolute"]
[connection signal="button_disabled" from="." to="controlled_shock_button/interact_area" method="set_monitoring"]
[connection signal="button_disabled" from="." to="controlled_shock_button/interact_area" method="set_monitorable"]
[connection signal="button_enabled" from="." to="controlled_shock_button" method="set_interact_state_absolute"]
[connection signal="button_enabled" from="." to="controlled_shock_button/interact_area" method="set_monitoring"]
[connection signal="button_enabled" from="." to="controlled_shock_button/interact_area" method="set_monitorable"]
[connection signal="button_down" from="controlled_shock_button" to="." method="shock"]
[connection signal="button_down" from="controlled_shock_button" to="controlled_shock_button" method="button_pressed"]
[connection signal="timeout" from="controlled_shock_cooldown" to="controlled_shock_button" method="unfreeze_disabled_state"]
